--- a/vue/vuelist/index.html
+++ b/vue/vuelist/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0,user-scalable=no">
+    <!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
     <title>vuelist</title>
-<!--    <link rel="stylesheet" href="index.scss" />-->
+    <!--IM融云-->
+    <script src="https://cdn.ronghub.com/RongIMLib-2.3.3.min.js"></script> 
+  	<script src="https://cdn.ronghub.com/RongEmoji-2.2.7.min.js"></script>  
   </head>
   <body>
     <div id="app"></div>
