--- a/vue/vuelist/index.html
+++ b/vue/vuelist/index.html
@@ -5,9 +5,11 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0,user-scalable=no">
     <!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
     <title>vuelist</title>
-    <!--IM融云-->
-    <script src="https://cdn.ronghub.com/RongIMLib-2.3.3.min.js"></script> 
-  	<script src="https://cdn.ronghub.com/RongEmoji-2.2.7.min.js"></script>  
+    <script src="static/js/lib-flexible-min.js"></script>
+    <script src="static/js/rem.js"></script>
+    <!--<script src="static/js/vue.js"></script>-->
+    <link rel="stylesheet" href="static/css/vnt.css" />
+    <!--<script src="static/js/vant.min.js"></script>-->
   </head>
   <body>
     <div id="app"></div>
